examples/test/testpolicy8632.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8632
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key43: value12
      key37: value37
      key30: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value42
      podSelector:
        matchLabels:
          key7: value21
